--- a/web_assets/less/_var.less
+++ b/web_assets/less/_var.less
@@ -32,7 +32,7 @@ COLOURS
 @teal:				#26c1bd;
 
 // Theme colours
-@themeColor:		@teal; //3a547b
+@themeColor:		@pinkLight; //3a547b
 @themeColorDark:	lighten(@themeColor, -20%);
 
 /* -----------------------------------------------------------------------------------------
@@ -59,15 +59,11 @@ TYPOGRAPHY
 @quoteFamily:		"robotolight", Helvetica, Arial, sans-serif;
 //@logo:				"leckerlioneregular", "robotoregular", Helvetica, Arial, sans-serif;
 @logo:				"robotolight", Helvetica, Arial, sans-serif;
+@serif:				"Calluna", georgia, serif;
 
 @bodyColor:			#6a6a6a;
 @headerColor:		#2a2a2a;
 	
-// Navigation - Not used now
-@navGradTop:		#343e46;
-@navGradBot:		lighten(@navGradTop, -10%);
-@navGradHover:   	lighten(@navGradTop, -20%);
-
 // Buttons
 @btnPrimary:		@themeColor;
 @btnSecondary:		(lighten(@btnPrimary, -8%));
