--- a/web_assets/css/batman.css
+++ b/web_assets/css/batman.css
@@ -221,7 +221,7 @@ body {
   cursor: default;
   background: rgba(245, 245, 245, 0.98);
   position: fixed;
-  height: 72px;
+  min-height: 72px;
   width: 100%;
   padding: 16px 0 0;
   z-index: 99;
@@ -266,8 +266,7 @@ body {
   -o-user-select: none;
   user-select: none;
   cursor: default;
-  background-color: #f89406;
-  background-image: url('../images/_heros/lead.jpg');
+  background-color: #c3325f;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -276,6 +275,8 @@ body {
   position: relative;
   padding-top: 102px;
   padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: table;
 }
 .mainContent .hero .heroInner {
@@ -591,7 +592,7 @@ Mobile
   
   }
   .mainContent .hero {
-    min-height: 300px;
+    min-height: 100%;
   }
   .mainContent .hero h1 {
     font-size: 80px;
